# django-form-designer

./: .gitignore  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
dfd_tests/: settings.py
form_designer/: admin.py  forms.py  models.py  settings.py  utils.py  views.py
form_designer/migrations/: 0001_initial.py
form_designer/static/form_designer/js/: form_designer_admin.js
form_designer/tests/: test_basics.py
