[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-form-designer-kcs"
dynamic = ["version"]
readme = "README.rst"
license = "BSD-3-Clause"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  "django>=5.2",
  "django-picklefield",
]

[project.urls]
Homepage = "http://github.com/kcsry/django-form-designer"

[tool.hatch.build]
include = [
  "form_designer/**/*.py",
  "form_designer/templates/",
  "form_designer/static/",
  "form_designer/locale/",
]

[tool.hatch.version]
path = "form_designer/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/form_designer"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "dfd_tests.settings"
norecursedirs = ["bower_components", "node_modules", ".git", "venv*"]
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "IGNORE_EXCEPTION_DETAIL",
  "ALLOW_UNICODE"
]
filterwarnings = [
  "ignore:.+default_app_config.+",
  "once::DeprecationWarning",
  "once::PendingDeprecationWarning",
  "ignore:.+PickledObjectField.from_db_value.+",
  "ignore:.+FORMS_URLFIELD_ASSUME_HTTPS.+",
]

[tool.ruff]
exclude = ["migrations", "node_modules", ".tox"]
line-length = 120

[tool.ruff.lint]
ignore = []
select = ["C9", "E", "F", "W", "I"]

[tool.ruff.lint.mccabe]
max-complexity = 10
